--- a/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
+++ b/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
@@ -9,8 +9,14 @@
         {% block widget_content %}
             <div class="row">
                 <div class="col-lg-12">
-                    {% for labelButton in labelButtons %}
-                        {{ labelButton | raw }}
+                    {% for labelData in labelsData %}
+                        {% include '@Gui/Table/button.twig' with {
+                            url: labelData.url,
+                            title: labelData.title,
+                            class: labelData.class,
+                            parameters: '',
+                            icon: ''
+                        } only %}
                     {% endfor %}
                 </div>
             </div>
