--- a/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
+++ b/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
@@ -1,35 +1,47 @@
+{# @var banner \Generated\Shared\Transfer\AdvertisementBannerTransfer #}
+
 {% extends '@Gui/Layout/layout.twig' %}
 
 {% block content %}
+    <style>
+        .dataTables_filter {
+            display: none;
+        }
+    </style>
+
     {% embed '@Gui/Partials/widget.twig' %}
         {% block widget_title -%}
             <h5>{{ 'Catalog' | trans }}</h5>
         {%- endblock %}
 
         {% block widget_content %}
-            <div class="row">
+            <!-- div class="row">
                 <div class="col-lg-12">
                     {% for labelData in labelsData %}
-                        {% include '@Gui/Table/button.twig' with {
+                        {% include '@ApplicationCatalogGui/Partials/label-button.twig' with {
                             url: labelData.url,
                             title: labelData.title,
-                            class: labelData.class,
-                            parameters: '',
-                            icon: ''
+                            class: labelData.class
                         } only %}
                     {% endfor %}
                 </div>
-            </div>
+            </div -->
             <br>
             <div class="row">
-                <div class="col-lg-3">
+                <!-- div class="col-lg-3">
                     <h3>{{ 'Discover by category' | trans }}</h3>
                     {% include '@ApplicationCatalogGui/Partials/category-menu.twig' with {
                         categoriesMenu: categoriesMenu
                     } only %}
-                </div>
-                <div class="col-lg-9">
+                </div -->
+                <div class="col-lg-12">
                     {{ appsTable | raw }}
+
+                    <div style="margin-top: 15px">
+                        {% include '@ApplicationCatalogGui/Partials/banner.twig' with {
+                            banner: banner
+                        } only %}
+                    </div>
                 </div>
             </div>
         {% endblock %}
