APPS-402: Basic PBC PSP (payone) [PoC] (#8442)
Co-authored-by: Ruslan Khudenko <ruslan.khudenko@spryker.com>
Co-authored-by: oleksandr-stoilovskyi <oleksandr.stoilovskyi@spryker.com>
Co-authored-by: René Klatt <rene.klatt@spryker.com>
Co-authored-by: Stanislav Matveev <matweewster@gmail.com>

--- a/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
+++ b/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
@@ -15,7 +15,7 @@
         {%- endblock %}
 
         {% block widget_content %}
-            <!-- div class="row">
+            {# <div class="row">
                 <div class="col-lg-12">
                     {% for labelData in labelsData %}
                         {% include '@ApplicationCatalogGui/Partials/label-button.twig' with {
@@ -25,15 +25,15 @@
                         } only %}
                     {% endfor %}
                 </div>
-            </div -->
+            </div> #}
             <br>
             <div class="row">
-                <!-- div class="col-lg-3">
+                {# <div class="col-lg-3">
                     <h3>{{ 'Discover by category' | trans }}</h3>
                     {% include '@ApplicationCatalogGui/Partials/category-menu.twig' with {
                         categoriesMenu: categoriesMenu
                     } only %}
-                </div -->
+                </div> #}
                 <div class="col-lg-12">
                     {{ appsTable | raw }}
 
