--- a/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/details.twig
+++ b/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/details.twig
@@ -41,12 +41,16 @@
                             <i class="fa"></i> {{ 'Disconnect app' | trans }}
                         </a>
                     {%- else -%}
-                        <a href="{{ url('/application-catalog-gui/index/connect', {'uuid': appData.applicationUuid}) }}" class="btn btn-create btn-outline btn-xs">
+                        <a href="{{ path('application-catalog-gui:index:connect', {'uuid': appData.applicationUuid}) }}" class="btn btn-create btn-md">
                             <i class="fa"></i> {{ 'Connect app' | trans }}
                         </a>
                     {%- endif -%}
                     <br>
                     <div class="text-muted">{{ appData.connectionState.description }}</div>
+                    <br>
+                    <a href="{{ path('application-catalog-gui:index:configure', {'uuid': appData.applicationUuid}) }}" class="btn btn-create btn-md">
+                        <i class="fa"></i> {{ 'Configuration' | trans }}
+                    </a>
                 </div>
             </div>
             <div class="row">
