--- a/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/details.twig
+++ b/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/details.twig
@@ -9,7 +9,7 @@
 {% block content %}
     {% embed '@Gui/Partials/widget.twig' %}
         {% block widget_title -%}
-            <h5>{{ 'App Details' | trans }}</h5>
+            <h5>{{ 'App Details' | trans }}: "{{ appData.name }}"</h5>
         {%- endblock %}
 
         {% block widget_content %}
@@ -40,7 +40,7 @@
                         <a href="#" class="btn btn-create btn-outline btn-xs" disabled="disabled">
                             <i class="fa"></i> {{ 'Disconnect app' | trans }}
                         </a>
-                    {%- else -%}
+                    {%- elseif appData.connectionState.code == 'not-connected' -%}
                         <a href="{{ path('application-catalog-gui:index:connect', {'uuid': appData.applicationUuid}) }}" class="btn btn-create btn-md">
                             <i class="fa"></i> {{ 'Connect app' | trans }}
                         </a>
@@ -48,9 +48,11 @@
                     <br>
                     <div class="text-muted">{{ appData.connectionState.description }}</div>
                     <br>
+                    {%- if appData.connectionState.code in ["connected", "pending"]  %}
                     <a href="{{ path('application-catalog-gui:index:configure', {'uuid': appData.applicationUuid}) }}" class="btn btn-create btn-md">
                         <i class="fa"></i> {{ 'Configuration' | trans }}
                     </a>
+                    {%- endif -%}
                 </div>
             </div>
             <div class="row">
