--- a/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/details.twig
+++ b/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/details.twig
@@ -74,8 +74,12 @@
             <div><br><br></div>
             <div class="row">
                 <div class="col-lg-10">
-                    <div class="badge bg-muted" style="width: 100%; height: 200px">
-                        {{ 'items gallery' | trans }}
+                    <div class="badge bg-muted text-center" style="width: 100%;">
+                        {%- for galleryItem in appData.galleryItems -%}
+                            <a href="{{ galleryItem.urlLarge }}" target="_blank">
+                                <img src="{{ galleryItem.urlSmall }}" style="border: 3px #eee solid; width: 300px;">
+                            </a>
+                        {%- endfor -%}
                     </div>
                     <div class="badge" style="background: white; width: 100%;"> </div>
                 </div>
