[APPS-2016] Provided SPA scripts management via registry service. (#8870)
* [APPS-2016] Provided SPA scripts management via registry service.

* [APPS-2016] Remove redundant css style file.

* [APPS-2016] Fixed assets URL.

* [APPS-2016] Removed Glue endpoint usage and SPA config assign.

* [APPS-2016] Adjusted env variable.

--- a/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
+++ b/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
@@ -2,7 +2,6 @@
 
 {% block head_css %}
     {{ parent() }}
-    <link rel="stylesheet" href="{{ assetsPath('css/spryker-zed-application-catalog-main.css') }}">
     <base href="/application-catalog-gui/" />
 {% endblock %}
 
@@ -12,13 +11,9 @@
 
 {% block footer_js %}
     {{ parent() }}
-    <script>
-        window['catalogSpaOptions'] = {
-            tenantId: '{{ tenantUuid }}',
-            language: '{{ localeName }}',
-            tenantDomain: '{{ baseUrlZed }}',
-            apiUrl: '{{ registryServiceEndpoint }}'
-        }
-    </script>
-    <script src="{{ assetsPath('js/spryker-zed-application-catalog-main.js') }}"></script>
+    <script src="{{ url(appCatalogScriptUrl, {
+        tenantId: tenantUuid,
+        tenantDomain: baseUrlZed,
+        language: localeName,
+    }) }}"></script>
 {% endblock %}
