APPS-2428: SPA App Catalog restored main styles

--- a/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
+++ b/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
@@ -2,6 +2,7 @@
 
 {% block head_css %}
     {{ parent() }}
+    <link rel="stylesheet" href="{{ assetsPath('css/spryker-zed-application-catalog-main.css') }}">
     <base href="/application-catalog-gui/" />
 {% endblock %}
 
