APPS-2013: fix field names after merging main branch

--- a/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
+++ b/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
@@ -13,7 +13,7 @@
 {% block footer_js %}
     {{ parent() }}
     <script src="{{ url(appCatalogScriptUrl, {
-        tenantId: tenantUuid,
+        tenantId: tenantIdentifier,
         language: localeName,
     }) }}"></script>
 {% endblock %}
