APPS-2578: SPA App Catalog. Added new env variable getAuthTokenUrl to use it in spa to refresh access token

--- a/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
+++ b/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
@@ -16,4 +16,7 @@
         tenantId: tenantUuid,
         language: localeName,
     }) }}"></script>
+    <script>
+        window.catalogSpaOptions.getAuthTokenUrl = '/application-catalog-gui/api-login';
+    </script>
 {% endblock %}
