APPS:2494:3055 Fixes to PaymentExternal module

--- a/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
+++ b/src/Spryker/Zed/ApplicationCatalogGui/Presentation/Index/index.twig
@@ -19,7 +19,7 @@
     </script>
 
     <script src="{{ url(appCatalogScriptUrl, {
-        tenantId: tenantIdentifier,
+        storeReference: storeReference,
         language: localeName,
     }) }}"></script>
 {% endblock %}
